ignore files and folders for mac

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@ obj/
 riderModule.iml
 /_ReSharper.Caches/
 .idea/
+.DS_Store
+.vscode/
+.vs/
+
+# Snyk Security Extension - AI Rules (auto-generated)
+.github/instructions/snyk_rules.instructions.md
