--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,32 @@
 /.idea/
 /.DS_Store
 
+## Ignore Visual Studio temporary files, build results, and personal settings
+.vs/
+.vscode/
+.idea/
+*.user
+*.suo
+*.userosscache
+*.sln.docstates
+
+## Build folders
+bin/
+obj/
+out/
+Debug/
+Release/
+[Bb]uild/
+x64/
+x86/
+[Aa][Rr][Mm]/
+[Aa][Rr][Mm]64/
+
+## NuGet packages
+*.nupkg
+*.snupkg
+packages/
+*.nuspec
+project.lock.json
+project.fragment.lock.json
+artifacts/
