--- a/AiAgentProject/appsettings.json
+++ b/AiAgentProject/appsettings.json
@@ -5,7 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "FOUNDRY_API_KEY": "2T3G1HdnZ6NfRdkvYpSPNyVrBrX5WR...B78zt0sAn7GR7ZYp2JQQJ99BJACYeBjFXJ3w3AAAAACOG3kkF",
-  "AZURE_OPENAI_ENDPOINT": "https://nway-ai-test-001.cognitiveservices.azure.com/"
+  "AllowedHosts": "*"
 }
