--- a/AiAgentProject/AiAgentProject.csproj
+++ b/AiAgentProject/AiAgentProject.csproj
@@ -11,6 +11,8 @@
   
         <PackageReference Include="Azure.AI.OpenAI" Version="2.3.0-beta.1" />
   
+        <PackageReference Include="Azure.AI.Vision.ImageAnalysis" Version="1.0.0" />
+  
         <PackageReference Include="Azure.Core" Version="1.49.0" />
   
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
