--- a/AiAgentProject/appsettings.json
+++ b/AiAgentProject/appsettings.json
@@ -1,11 +1,11 @@
 {
   "AzureOpenAI": {
-    "Endpoint": "https://aigenttestingproject.cognitiveservices.azure.com/",
+    "Endpoint": "",
     "Deployment": "gpt-4.1",
     "ApiKey": "",
     
     "DefaultSystemPrompt": "You are a helpful AI assistant.",
-    "Temperature": 0.4,
+    "Temperature": 0.1,
     "TopP": 1.0,
     "FrequencyPenalty": 0.0,
     "PresencePenalty": 0.0,
